# minicore

./: CMakeLists.txt  LICENSE  README.md  mco.c  mco.h  mco_encode.c  mco_encode.h  mco_hidden.c  mco_hidden.h  mco_inter.c  mco_inter.h  mco_map.c  mco_map.h  mco_properties.c  mco_properties.h  mco_queue.c  mco_queue.h  mco_string.c  mco_string.h  mco_system.c  mco_system.h  mco_thread_pool.c  mco_thread_pool.h  mco_thread_test.c  mco_thread_test.h  mco_util.c  mco_util.h
unit_test/: CMakeLists.txt  properties_test.c  properties_test.h  string_test.c  string_test.h  test.conf  test_main.c
