CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (minicore)

SET (CMAKE_VERBOSE_MAKEFILE false)

SET (CMAKE_C_COMPILER gcc)

ADD_DEFINITIONS(-D_POSIX_C_SOURCE=200809L)
ADD_COMPILE_OPTIONS (-Wall -O)

LINK_LIBRARIES (pthread dl)

SET (SRCS mco.c mco_hidden.c mco_string.c) 

ADD_LIBRARY (${CMAKE_PROJECT_NAME} SHARED ${SRCS})
